# solar-env

./: README.md  app.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
