[project]
name = "solar-env"
version = "0.1.0"
description = "Solar Energy Optimization RL Environment"
authors = [{ name = "Chaitanya" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env = "env:SolarEnv"
